packages/static_bits/tests/compile_fail/decode_uleb128_ct_partial_slice.zig
const bits = @import("static_bits");

comptime {
    const bytes = [_]u8{ 0xAC, 0x02, 0x00 };
    _ = bits.varint.decodeUleb128Ct(&bytes);
}
